# hmcs

./: .env  .gitignore  Cargo.toml  flake.nix
migrations/: 0_user.sql  1_post.sql
src/: error.rs  main.rs  theme.rs
templates/: base.html
